-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 11, 13
-
Component/s: hotspot
-
b20
-
Verified
jaotc crashes with
jib > #
jib > # A fatal error has been detected by the Java Runtime Environment:
jib > #
jib > # Internal Error (open/src/hotspot/share/gc/shared/memAllocator.cpp:147), pid=14878, tid=15307
jib > # assert(!(((ThreadShadow*)__the_thread__)->has_pending_exception())) failed: Should not allocate with exception pending
jib > #
jib > # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-05-01-2136356.ekaterina.pavlova.jdk.jdk)
jib > # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-05-01-2136356.ekaterina.pavlova.jdk.jdk, mixed mode, aot, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
jib > # Problematic frame:
jib > # V [libjvm.so+0x126991c] MemAllocator::Allocation::verify_before()+0x4c
when trying to AOT some test classes.
jib > #
jib > # A fatal error has been detected by the Java Runtime Environment:
jib > #
jib > # Internal Error (open/src/hotspot/share/gc/shared/memAllocator.cpp:147), pid=14878, tid=15307
jib > # assert(!(((ThreadShadow*)__the_thread__)->has_pending_exception())) failed: Should not allocate with exception pending
jib > #
jib > # JRE version: Java(TM) SE Runtime Environment (13.0) (fastdebug build 13-internal+0-2019-05-01-2136356.ekaterina.pavlova.jdk.jdk)
jib > # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 13-internal+0-2019-05-01-2136356.ekaterina.pavlova.jdk.jdk, mixed mode, aot, sharing, tiered, jvmci, jvmci compiler, compressed oops, g1 gc, linux-amd64)
jib > # Problematic frame:
jib > # V [libjvm.so+0x126991c] MemAllocator::Allocation::verify_before()+0x4c
when trying to AOT some test classes.
- relates to
-
JDK-8220623 [JVMCI] Update JVMCI to support JVMCI based Compiler compiled into shared library
-
- Resolved
-