8223262: [AOT] jaotc crashes with assert(!(((ThreadShadow*)__the_thread__)->has_pending_exception())) failed: Should not allocate with exception pending

Added missing checks for pending exception.

Reviewed-by: never, gdub, dnsimon